[project]
name = "daft-h3"
version = "0.1.0"
description = "H3 geospatial indexing functions for Daft"
requires-python = ">=3.10"
dependencies = ["daft>=0.7.5"]
license = "Apache-2.0"

[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/gweaverbiodev/daft-h3"
Issues = "https://github.com/gweaverbiodev/daft-h3/issues"